stylesheets/stylesheet.css
/* ... */
.projects .label a {
  color: #FFF;
  display: inline-block;
  padding: 2px 10px;
}

.projects .tags {
  font-size: 12px;
  font-style: italic;
  margin-bottom: 0;
}

.projects .label .count {
  background: none white;
  border: 1px solid white;
  border-radius: 8px;
  color: #2E7BA9;
  display: inline-block;
  height: 16px;
  line-height: 16px;
  margin: -2px -4px 0 4px;
  text-align: center;
  vertical-align: middle;
  min-width: 16px;
}

.projects .label .count img {
  background: none repeat scroll 0 0 white;
  border: 0 none;
  border-radius: 8px;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  display: inline-block;
  height: 16px;
  margin: 0;
  padding: 0;
  width: 16px;
}

.popular-tags {
  display: flex;
  flex-wrap: wrap;
  gap: 1em 0.5em;
}

ul.popular-tags li {
  list-style: none;
  padding-left: 0;
}

.popular-tags a {
  display: inline-flex;
  align-content: center;
  padding: 0.5em 0.75em;
  font-size: 15px;
  border: 1px solid var(--container-border-alt, transparent);
  border-radius: 1em;
  text-decoration: none;
  transition: all 0.3s;
}

.popular-tags a:hover,
.popular-tags a:focus,
.popular-tags a:focus-within {
  background-color: rgba(var(--container-rgb), 0.2);
  border-color: var(--databox-text);
  color: var(--databox-text);
}

.popular-tags a span.popular-tags__frequency {
  margin-left: 0.45em;
  font-size: 10px;
  color: var(--body-color);
}

@media (max-width: 768px) {
  body {
    padding: 0 0;
  }

  #forkme_banner {
    display: none;
  }

  header {
    text-align: center;
  }

  h1 {
    font-size: 42px;
  }

  .block h1 {
    line-height: 42px;
    background: none;
    text-align: left;
    text-shadow: none;
  }

  .block h1 .header-inside {
    padding: 0;
  }

  #main-container {
    border-right: none;
    border-left: none;
    border-radius: 0;
  }

  #main-container .block {
    padding: 20px;
  }

  table.projects td {
    display: block;
    padding-right: 0;
  }

  .ribbon {
    font-size: 16px !important;
    position: relative;
    margin-bottom: 2em;
    width: 50%;
    right: 0;
    top: 0;
  }

  select {
    max-width: 100%;
  }
}

.radio-btn-row {
  display: flex;
  flex-direction: row;
  margin-bottom: 20px;
  flex-wrap: wrap;
  gap: 0.75rem;
}

.radio-btn-wrapper {
  /* margin: 4px 4px; */
}

.radio-btn {
  background-color: #2E7BA9;
  color: #FFF;
  font-size: 14px;
  padding: 0.25rem 1rem;
  line-height: 26px;
  outline: none;
  cursor: pointer;
  min-width: 90px;
  border-radius: 5px;
}

.radio-btn:hover {
  box-shadow: 3px 3px 10px rgba(54, 132, 248, 0.5);
  transition-duration: .1s;
  transform: translateY(-1px);
}

.radio-btn.radio-btn-selected {
  background-color: #12425e;
}

.filters-panel {
  margin-bottom: 20px;
}

.projects .stats {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.fork-count {
    display: flex;
    margin-top: 10px;
    height: max-content;
}

.fork-count-svg {
    align-self: center;
}

@media screen and (max-width : 670px) {
  #view-mode {
    position: fixed;
    width: 44px;
    height: 44px;
    z-index: 999;
    margin-right: 10px;
    right: 0;
    top: 18px;
  }

  #back2Top {
    width: 44px;
    height: 44px;
    overflow: hidden;
    z-index: 999;
    display: none;
    cursor: pointer;
    -moz-transform: rotate(270deg);
    -webkit-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
    position: fixed;
    right: 0;
    bottom: 18px;
    margin-right: 10px;
    border-radius: 50%;
    background-color: #DDD;
    color: #555;
    display: flex !important;
    align-items: center;
    justify-content: center;
    font-size: 28px;
    transition: 0.3s;
  }
}

